# crazyswarm2_application

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/: common.h  crazyswarm_app.h  structs.h
launch/: app_w_april.py  april.yaml  config.rviz  config.yaml  launch.py  logger.csv  mission.py  rviz.py  single.py  single_april.py
launch/environment/: arena.yaml  hall.yaml  lab.yaml  maze.yaml
launch/mission/: 1_agent_move.yaml  3_agent_orca.yaml  3_agent_orca_eliminate.yaml  agent_high.yaml  agent_move.yaml  empty.yaml  external.yaml  takeoff_land.yaml
meshes/: master.dae
msg/: AgentState.msg  AgentsStateFeedback.msg  NamedPose.msg  UserCommand.msg
scripts/: external_sample.py  test_external.py
src/: april_detection_proxy.cpp  april_tag.cpp  common.cpp  crazyswarm_app.cpp  handling_planning.cpp  mission_node.cpp
src/handler/: april_tag.cpp  planning.cpp
src/orca/: agent.cc  agent.h
src/visualization/: rviz_visualizer.cpp
